--- a/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/STYLE.SCSS
+++ b/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/STYLE.SCSS
@@ -1,12 +1,7 @@
 body{
   min-width: 1900px;
   margin: 0px;
-
 }
-      
-    
-
-
   .menu{
       display: grid;
       grid-template-columns: 25% 9% 10% 9% 10% 10% 10%;
@@ -125,7 +120,65 @@ body{
       }
   
   }
-    
+  
+  
+  
+  .wrapper{
+      width: 70%;
+      display: grid;
+      grid-template-columns: repeat(5, 3fr);
+      grid-template-rows: minmax(100px, auto);
+      grid-gap: 1em;
+      padding-left: 17em;
+      justify-items: start;
+  
+  
+      &__div{
+          padding: 1em;
+      }
+      
+  
+      &__grid-2{
+          grid-column: 2/4;
+      }
+  
+      &__img{
+          width: 100%;
+          height: auto;
+      }
+      
+      &__h1, &__p {
+          font-size: 22px;
+          font-family: sans-serif;
+      }
+      
+      &__p {
+          font-size: 16px;
+      }
+  
+      &__title a:hover,
+      &__country a:hover {
+      text-decoration: underline;
+      color: rgb(63, 173, 236);
+      }
+  
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   .container {
     height: 200vh;
@@ -136,7 +189,7 @@ body{
   }
 
 
-  .grid-1{
+  .gridd-1{
     width: 98.5vw;
     height: 100vh;
     display: grid;
@@ -150,7 +203,7 @@ body{
   }
 
 
-  .box1-grid-1 {
+  .box1-gridd-1 {
     
     grid-column: 1/3;
     display: flex;
@@ -164,7 +217,7 @@ body{
 
 
 
-  .box3-grid-1{
+  .box3-gridd-1{
     grid-column: 1/4;
     display: flex;
     flex-wrap: wrap;
@@ -176,7 +229,7 @@ body{
  
 
 
-  .box5-grid-1 {
+  .box5-gridd-1 {
     grid-column: 2/4;
     display: flex;
     flex-wrap: wrap;
@@ -186,7 +239,7 @@ body{
   }
 
 
-  .grid-2 {
+  .gridd-2 {
     width: 98.5vw;
     height: 100vh;
     display: grid;
@@ -199,7 +252,7 @@ body{
     
   }
 
-  .box1-grid-2 {
+  .box1-gridd-2 {
     grid-column: 1/3;
     display: flex;
     flex-wrap: wrap;
@@ -210,7 +263,7 @@ body{
   }
 
 
-  .box3-grid-2 {
+  .box3-gridd-2 {
     grid-row: 2/4;
     
     
@@ -219,7 +272,7 @@ body{
   }
 
 
-  .box4-grid-2 {
+  .box4-gridd-2 {
     grid-column: 2/4;
     display: flex;
     flex-wrap: wrap;
@@ -232,7 +285,7 @@ body{
   }
 
 
-  .box5-grid-2 {
+  .box5-gridd-2 {
     grid-column: 2/4;
     display: flex;
     flex-wrap: wrap;
@@ -244,7 +297,7 @@ body{
     
   }
 
-  .box1-grid-1 .img{
+  .box1-gridd-1 .img{
     width: 50%;
     height: 100%;
     
@@ -252,51 +305,51 @@ body{
   }
 
 
-  .box2-grid-1 .img{
+  .box2-gridd-1 .img{
     
     width: 100%;
     height: 100%;
   }
 
-  .box3-grid-1 .img{
+  .box3-gridd-1 .img{
     width: 50%;
     height: 100%;
     margin-right: -60px;
   
   }
 
-  .box4-grid-1 .img{
+  .box4-gridd-1 .img{
     width: 100%;
     height: 100%;
   }
 
-  .box5-grid-1 .img{
+  .box5-gridd-1 .img{
     width: 50%;
     height: 100%;
   }
 
-  .box1-grid-2 .img{
+  .box1-gridd-2 .img{
     width: 50%;
     height: 100%;
   }
 
-  .box2-grid-2 .img{
+  .box2-gridd-2 .img{
     width: 100%;
     height: 100%;
   }
-  .box3-grid-2 .img{
+  .box3-gridd-2 .img{
     width: 100%;
     height: 60%;
   
   }
 
-  .box4-grid-2 .img{
+  .box4-gridd-2 .img{
     width: 50%;
     height: 100%;
   }
 
 
-  .box5-grid-2 .img{
+  .box5-gridd-2 .img{
     width: 50%;
     height: 100%;
   }
@@ -573,59 +626,4 @@ body{
   }
 
 
-  .wrapper{
-    width: 70%;
-    display: grid;
-    grid-template-columns: repeat(5, 3fr);
-    grid-template-rows: minmax(100px, auto);
-    grid-gap: 1em;
-    padding-left: 17em;
-    justify-items: start;
-
-    &__div{
-        padding: 1em;
-    }
-    
-
-    &__grid-2{
-        grid-column: 2/4;
-    }
-
-    &__img{
-        width: 100%;
-        height: auto;
-        
-    }
-    
-    &__h1, &__p {
-        font-size: 22px;
-        font-family: sans-serif;
-    }
-    
-    &__p {
-        font-size: 16px;
-    }
-
-    &__title a:hover,
-    &__country a:hover {
-    text-decoration: underline;
-    color: rgb(63, 173, 236);
-    }
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  
