--- a/01-HTML-CSS/06-BEM model/amazon/amazon.scss
+++ b/01-HTML-CSS/06-BEM model/amazon/amazon.scss
@@ -1,41 +1,63 @@
-.header{
-    
+body{
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+.upperHeader{
     width: 100%;
     color: white;
     background-color: black;
     height: 5vh;
     display: flex;
+    gap:10vw;
+    padding: 10px 0 0 10px;
 
-&__logo{
-   color: brown; 
+
+&__logo img{
+   height: 5vh;
+   width: 5vw;
 }
 
-&__item1{
-  color: aqua;
+&__searchBar{
+    width: 60vw;
+    padding-left: 90px;
+   }
+
+input{
+    display: inline-block;
+    width: 100%;
+}
+
+&__flag{
+    color: red;
+}
+}
+
+.lowerHeader{
+
+    display: grid;
+    grid-template-columns: 80px 80px 80px 80px;
+    background-color: black;
+    width: 100%;
+    height: 5vh;
+    padding: 10px 0 0 15px;
+    
+    
+&__item{
+
+    padding: 0 1px;
+}
+
+a{
+    text-decoration: none;
+    color: blanchedalmond;
+}
+
+a:hover{
+    border: white 1px solid;
 }
 
 
 
-}
-
-.carousel{
-
-        display: flex;
-        align-items:center;
-        margin-top: 4vh;
-        justify-content: center;
-
-&__buttonItem{
-    background-color: #93DDE8;
-    height: 95px;
-    width: 25px;
-    padding: 0 5px;
-}
-
-& .fas{
-    position: relative;
-    top: 32px;
-    color: rgb(168, 168, 168);
-}
 
 }
