--- a/01-HTML-CSS/06-BEM model/amazon/amazon.scss
+++ b/01-HTML-CSS/06-BEM model/amazon/amazon.scss
@@ -6,7 +6,7 @@ body{
 .upperHeader{
     width: 100%;
     color: white;
-    background-color: black;
+    background-color: #121921;
     height: 5vh;
     display: flex;
     gap:10vw;
@@ -37,7 +37,7 @@ input{
 
     display: grid;
     grid-template-columns: 80px 80px 80px 80px;
-    background-color: black;
+    background-color: #232f3e;
     width: 100%;
     height: 5vh;
     padding: 10px 0 0 15px;
@@ -58,6 +58,37 @@ a:hover{
 }
 
 
-
-
 }
+
+.registryGrid{
+    width: 70vw;
+    height: 55vh;
+    margin: 100px 300px 300px ;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 6fr 16fr;
+    justify-content: center;
+    gap: 2vw;
+
+    &__title{
+        grid-column: span 5;
+        text-align: center;
+    }
+
+    &__gift{
+        text-align: center;
+        background-color: #eee;
+        font-family: 'Oswald', sans-serif;
+
+        img{
+            width: 100%;
+        }
+
+        :hover{
+            cursor: pointer;
+        }
+        
+    }
+}
+    
+
