--- a/01-HTML-CSS/06-BEM model/amazon/amazon.scss
+++ b/01-HTML-CSS/06-BEM model/amazon/amazon.scss
@@ -6,7 +6,7 @@ body{
 .upperHeader{
     width: 100%;
     color: white;
-    background-color: black;
+    background-color: #121921;
     height: 5vh;
     display: flex;
     gap:10vw;
@@ -37,7 +37,7 @@ input{
 
     display: grid;
     grid-template-columns: 80px 80px 80px 80px;
-    background-color: black;
+    background-color: #232f3e;
     width: 100%;
     height: 5vh;
     padding: 10px 0 0 15px;
@@ -61,3 +61,61 @@ a:hover{
 
 
 }
+
+
+
+.dealGrid{
+    margin-top:30px;
+    display:grid;  
+    border:black 2px solid;    
+    grid-template-columns: repeat(12, 130px);
+    grid-template-rows:160px 200px;
+    justify-content: center;
+     
+    &__runner{
+    
+        grid-column:span 12;
+        border:black 2px solid;    
+
+      img{
+          width:100%;
+          max-height:100%;
+      }  
+  
+    }
+    &__dealbox--dealbox1{
+     width:auto;
+     border:black 2px solid;
+
+
+    }
+    &__dealbox{
+        border:black 2px solid;
+
+        img{
+            width:100%;
+            height:50%;
+            cursor:pointer;
+        }
+
+        p{
+
+        }
+
+        h4{
+            font-weight:normal;
+            color:black;
+          
+        }
+        h3{
+            color:red
+            font-weight:normal;
+        }
+
+    }
+    
+   
+  
+  
+  
+  }
