--- a/01-HTML-CSS/06-BEM model/amazon/amazon.scss
+++ b/01-HTML-CSS/06-BEM model/amazon/amazon.scss
@@ -58,11 +58,45 @@ a:hover{
 }
 
 
+}
 
+/*Gift page*/
+
+.registryGrid{
+    width: 70vw;
+    height: 55vh;
+    margin: 100px 300px 300px ;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 6fr 16fr;
+    justify-content: center;
+    gap: 2vw;
+
+    &__title{
+        grid-column: span 5;
+        text-align: center;
+    }
+
+    &__gift{
+        text-align: center;
+        background-color: #eee;
+        font-family: 'Oswald', sans-serif;
+
+        img{
+            width: 100%;
+        }
+
+        :hover{
+            cursor: pointer;
+        }
+        
+    }
+}
+    
 
 }
 
-
+/*Deal page*/
 
 .dealGrid{
     margin-top:30px;
