--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/style.scss
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/style.scss
@@ -1,20 +1,38 @@
-body{
-    background-color: rgb(88, 42, 42);
+/*fonts*/
+@font-face {
+    font-family: 'typeka';
+    src: url('fonts/Typeka.otf');
 }
+@font-face {
+    font-family: 'typewriter';
+    src: url('https://www.1001fonts.com/bptypewrite-font.html');
+}
+/*body style*/
+body{
+    background-color: #100806;
+    a{
+        text-decoration: none;
+        color: white;
+    }
+}
+
+/*logo and nav style*/
 .header{
-    background-color: black;
+    margin: 0;
+    padding: 0;
+    background-color: #0A0A0A;
+    font-family: 'typeka';
     width: 100vw;
     position: absolute;
+    color: #FFFFFF;
 
     &--logo{
-    color: #ffffff;
-    width: 66vw;
+    color: #DED9D5;
     position: relative;
-    font-family: 'Bangers', cursive;
-    font-size: 10vw;
-    align-items: center;
-    padding-left: 30vw;
-    }
+    font-size: 66px;
+    padding-left: 37vw;
+    padding-right: 37vw;
+   }
 }
     .navbar{
     width: 100%;
@@ -22,13 +40,18 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 10px;
+   
+    
     
     &--item{
         margin-right: 2vw;
         height: 2vh;
-        font-size: 2.5vh;
+        font-family: 'typewriter';
+        font-size: 2vw;
         display: flex;
         color: white;
+        margin: 2vw;
     
     }
     &--item:hover{
@@ -36,8 +59,8 @@ body{
     }
     }
 
+    /*social media*/
 .socialmedia{
-    
         position: absolute;
         display: inline-block;
         direction: rtl;
@@ -45,11 +68,14 @@ body{
         right: 10vw;
         background-color: transparent;
     &--item{
-        color: white;
+        -webkit-filter: invert(100%);
+        font-family: 'typewriter';
         height: 2vh;
-        width: 2vw;
+        width: 4vw;
         margin-left: 1vw;
         cursor: pointer;
+    
+        
 
         img{
             height: 4.2vh;
