--- a/01-HTML-CSS/06-BEM model/Lior_Or-Will/style_final.scss
+++ b/01-HTML-CSS/06-BEM model/Lior_Or-Will/style_final.scss
@@ -1,3 +1,148 @@
+/* For Home page only*/
+
+.homebox{
+
+
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    padding: 2px;
+    border: 3px solid black;
+    background-size: cover;
+    text-align: start;
+    text-shadow: 0 0 3px #000000, 0 0 5px #000000;
+
+    & :nth-child(1){
+
+        font-size: 20px;
+        font-weight: 700;
+    
+    }
+
+    & :hover{
+
+        cursor: pointer;
+        
+    }
+
+    &__homebox1{
+
+        grid-row: 1/3;
+        background-image: url(https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/25/3157c030-c1e3-4afc-b825-93ad2d5d516c.jpg);
+        background-size: cover;
+
+        & h1{
+
+            font-size: 40px;
+          
+          }
+
+          & :nth-child(3){
+
+
+            border-left: 5px solid red;
+        
+        }
+    }
+
+    &__homebox2{
+    
+
+
+        background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/58DC/production/_121784722_migrants4.jpg);
+        background-size: cover;
+        
+        & :nth-child(2){
+
+            border-left: 5px solid red;
+        }
+    }
+
+    &__homebox3{
+
+        background-image: url(https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/24/f1cc5ab7-b958-4a01-8696-4a292bc8fcbd.jpg);
+        background-size: cover;
+
+        & :nth-child(2){
+
+            border-left: 5px solid red;
+        
+        }
+    }
+
+    &__homebox4{
+
+
+        background-image: url(https://ychef.files.bbci.co.uk/1280x720/p0b576yw.webp);
+        background-size: cover;
+        
+        & :nth-child(2){
+
+            border-left: 5px solid red;
+        
+        }
+    }
+
+    &__homebox5{
+
+        background-image: url(https://ichef.bbci.co.uk/images/ic/832xn/p09ydv2w.jpg);
+        background-size: cover;
+
+        & :nth-child(2){
+
+            border-left: 5px solid red;
+        
+        }
+    }
+
+}
+
+
+.bbclogo{
+
+    display: flex;
+    justify-content: space-around;
+    border-right: 1px solid white;
+
+}
+
+.logobox{
+
+    font-family: 'Outfit',sans-serif;
+    height: 20px;
+    width: 20px;
+    background-color: white;
+    color: black;
+
+}
+
+
+
+.homecontainer{
+
+    padding: 5px;
+    margin-top: 30px;
+    width: 90%;
+    display: grid;
+    grid-template-columns: 2fr repeat(3,1fr);
+    grid-template-rows: 2fr 1fr;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 1em;;
+    color: white;
+    grid-auto-flow: column;
+    height: 300px;
+
+    & p{
+
+        margin-block: 2px;
+        font-size: 20px;
+
+    }
+}
+
+
+
 /* For Sport page only*/
 
 .wrappersport {
