--- a/01-HTML-CSS/06-BEM model/amazon/amazon.scss
+++ b/01-HTML-CSS/06-BEM model/amazon/amazon.scss
@@ -6,7 +6,7 @@ body {
 .upperHeader {
     width: 100%;
     color: white;
-    background-color: #121921;
+    background-color: #232f3e;
     height: 5vh;
     display: flex;
     gap: 10vw;
@@ -35,7 +35,7 @@ body {
 .lowerHeader {
     display: grid;
     grid-template-columns: 80px 80px 80px 80px;
-    background-color: #232f3e;
+    background-color:#121921 ;
     width: 100%;
     height: 5vh;
     padding: 10px 0 0 15px;
@@ -192,41 +192,136 @@ body {
 
  
 
+/* Home-Page */
+
+.box { 
+    display: grid;
+    grid-template-columns: repeat(4, 16vw);
+    grid-template-rows: 30vh 30vh 30vh;
+    margin-top: 4vh;
+    justify-content: center;
+    gap: 30px;
+
+    &__boxItem{
+        padding: 5px;
+        font-size: 12px;
+        font-weight: 700;
+        color: rgb(78, 78, 78);
+
+        &--boxItem1{
+            grid-column: span 4;
+            display: grid;
+            grid-template-columns: 0.05fr 0.9fr 0.05fr;
+            background-color: #B1E6EE;
+        }
+
+        & img{
+            object-fit: cover;
+            padding-top: 3px;
+            width: 100%;
+            height: 75%;
+        }
+
+        & span{
+            font-size: 10px;
+            font-weight: 700;
+            color: rgb(21, 111, 172);
+          }
+
+        &--boxItem1 img{
+            object-fit: cover;
+            vertical-align: bottom;
+            width: 100%;
+            height: 100%;
+
+            .arrowRight, .arrowLeft{
+                place-self: center; 
+                position: relative;
+            }
+
+            .arrowRight{
+                bottom: 18%;
+                
+            }
+
+            .arrowLeft{
+                bottom: 15%;
+            }
+
+        }       
+
+    }
+    
+
+    & .fas{
+        position: relative;
+        top: 32px;
+        color: #a8a8a8;
+    }
+
+
+
+
+}
+
 /* Service-Page */
-h1 {
-    text-align: center;
-    margin-top: 100px;
-    margin-bottom: -100px;
-    font-size: 35px;
+// h1 {
+//     text-align: center;
+//     margin-top: 100px;
+//     margin-bottom: -300px;
+//     font-size: 35px;
+//     font-weight: 500;
+// }
+
+h2 {
+    text-align: right;
     font-weight: 500;
 }
+h3 {
+    text-align: right;
+    font-weight: 500;
+    color: rgb(161, 161, 161);
+}
+
 .serviceGrid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: reapeat(4, 1fr);
-    margin: 150px;
-    gap: 2%;
-    justify-content: center;
+    grid-template-rows: repeat(4, 1fr);
+    margin: 300px 370px 300px;
+    gap: 10px;
+    width: 50vw;
+    height: 20vh;
+    align-content: center;
 
+    &__title {
+        grid-column: span 3;
+        text-align: center;
+        & h1 {
+            font-weight: 500;
+        }
+    }
     &__option {
-        border: 1px solid rgb(151, 151, 151);
-        width: 50%;
-        height: 50%;
+        display: flex;
+        flex-direction: row-reverse;
+        border: 1px solid rgb(90, 90, 90);
         padding: 10px;
         border-radius: 7px;
+        max-width: 300px;
+        max-height: 100px;
     }
     &__option img {
-        justify-content: center;
+        justify-content: left;
+        padding-top: -100px;
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+    }
 
-        &__option {
-            border: 1px solid rgb(151, 151, 151);
-            width: 50%;
-            height: 50%;
-            padding: 10px;
-            border-radius: 7px;
-        }
-        &__option img {
-            justify-content: center;
+    &__option:hover {
+        background-image: linear-gradient(to bottom right, rgb(255, 255, 255), rgb(154, 154, 154));
+        & h2 {
+            color: orange;
         }
     }
 }
+
