--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/style.scss
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/style.scss
@@ -67,22 +67,56 @@ body{
         top: 22vh;
         right: 9vw;
         background-color: transparent;
-    &--item{
-        filter: none;
-        -webkit-filter: invert(100%);
-        font-family: 'typewriter';
-        height: 2vh;
-        width: 4vw;
-        margin-left: 1vw;
-        cursor: pointer;
-    
-        
-
-        img{
-            height: 4vh;
-            width: 2vw;
-        }
-    }
+        ul {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            position: absolute;
+          }
+          
+          ul li {
+            list-style: none;
+            margin: 0 15px;
+          }
+          
+          ul li a {
+            position: relative; 
+            display: block;
+            width: 60px;
+            height: 60px;
+            text-align: center;
+            line-height: 63px;
+            background: transparent;
+            border-radius: 50%;
+            font-size: 30px;
+            color: #666;
+            transition: .5s;
+          }
+          
+          ul li a::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background:transparent;
+            transition: .5s;
+            transform: scale(.9);
+            z-index: -1;
+          }
+          
+          ul li a:hover::before {
+            transform: scale(1.1);
+            box-shadow: 0 0 15px #ffffff;
+          }
+          
+          ul li a:hover {
+            color: #999999;
+            box-shadow: 0 0 5px #ffffff;
+            text-shadow: 0 0 1px #ffffff;
+          }
     }
 
     /*Home page content*/
