--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/style.scss
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/style.scss
@@ -91,31 +91,28 @@ body{
             font-size: 30px;
             color: #666;
             transition: .5s;
-          }
-          
-          ul li a::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            background:transparent;
-            transition: .5s;
-            transform: scale(.9);
-            z-index: -1;
-          }
-          
-          ul li a:hover::before {
-            transform: scale(1.1);
-            box-shadow: 0 0 15px #ffffff;
-          }
-          
-          ul li a:hover {
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                background:transparent;
+                transition: .5s;
+                transform: scale(.9);
+                z-index: -1;
+              }
+              &:hover::before {
+                transform: scale(1.1);
+                box-shadow: 0 0 15px #ffffff;
+              }
+            &:hover {
             color: #999999;
             box-shadow: 0 0 5px #ffffff;
             text-shadow: 0 0 1px #ffffff;
+          }
           }
     }
 
