--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/style.scss
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/style.scss
@@ -3,21 +3,24 @@
     font-family: 'typeka';
     src: url('fonts/Typeka.otf');
 }
+
 @font-face {
     font-family: 'typewriter';
     src: url('https://www.1001fonts.com/bptypewrite-font.html');
 }
+
 /*body style*/
-body{
+body {
     background-color: #100806;
 }
 
 /*logo and nav style*/
-.header{
-    a{
+.header {
+    a {
         text-decoration: none;
         color: white;
     }
+
     margin: 0;
     padding: 0;
     background-color: #0A0A0A;
@@ -26,25 +29,26 @@ body{
     position: absolute;
     color: #FFFFFF;
 
-    &--logo{
-    color: #DED9D5;
-    position: relative;
-    font-size: 66px;
-    padding-left: 37vw;
-    padding-right: 37vw;
-   }
+    &--logo {
+        color: #DED9D5;
+        position: relative;
+        font-size: 66px;
+        padding-left: 37vw;
+        padding-right: 37vw;
+    }
 }
-    .navbar{
+
+.navbar {
     width: 100%;
     height: 5vh;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 10px;
-   
-    
-    
-    &--item{
+
+
+
+    &--item {
         margin-right: 2vw;
         height: 2vh;
         font-family: 'typewriter';
@@ -52,75 +56,77 @@ body{
         display: flex;
         color: white;
         margin: 2vw;
-    
+
     }
-    &--item:hover{
+
+    &--item:hover {
         cursor: pointer;
     }
-    }
+}
 
-    /*social media*/
-.socialmedia{
+/*social media*/
+.socialmedia {
+    position: absolute;
+    display: inline-block;
+    direction: rtl;
+    top: 22vh;
+    right: 9vw;
+    background-color: transparent;
+
+    ul {
+        margin: 0;
+        padding: 0;
+        display: flex;
         position: absolute;
-        display: inline-block;
-        direction: rtl;
-        top: 22vh;
-        right: 9vw;
-        background-color: transparent;
-        ul {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            position: absolute;
-          }
-          
-          ul li {
-            list-style: none;
-            margin: 0 15px;
-          }
-          
-          ul li a {
-            position: relative; 
-            display: block;
-            width: 60px;
-            height: 60px;
-            text-align: center;
-            line-height: 63px;
-            background: transparent;
-            border-radius: 50%;
-            font-size: 30px;
-            color: #666;
-            transition: .5s;
-          }
-          
-          ul li a::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            background:transparent;
-            transition: .5s;
-            transform: scale(.9);
-            z-index: -1;
-          }
-          
-          ul li a:hover::before {
-            transform: scale(1.1);
-            box-shadow: 0 0 15px #ffffff;
-          }
-          
-          ul li a:hover {
-            color: #999999;
-            box-shadow: 0 0 5px #ffffff;
-            text-shadow: 0 0 1px #ffffff;
-          }
     }
 
-    /*Home page content*/
-.Homeimg{
+    ul li {
+        list-style: none;
+        margin: 0 15px;
+    }
+
+    ul li a {
+        position: relative;
+        display: block;
+        width: 60px;
+        height: 60px;
+        text-align: center;
+        line-height: 63px;
+        background: transparent;
+        border-radius: 50%;
+        font-size: 30px;
+        color: #666;
+        transition: .5s;
+    }
+
+    ul li a::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background: transparent;
+        transition: .5s;
+        transform: scale(.9);
+        z-index: -1;
+    }
+
+    ul li a:hover::before {
+        transform: scale(1.1);
+        box-shadow: 0 0 15px #ffffff;
+    }
+
+    ul li a:hover {
+        color: #999999;
+        box-shadow: 0 0 5px #ffffff;
+        text-shadow: 0 0 1px #ffffff;
+    }
+}
+
+/*Home page content*/
+.Homeimg {
     position: absolute;
     z-index: 1;
     width: 623px;
@@ -128,10 +134,12 @@ body{
     left: 20vw;
     top: 33vh;
 }
-#Joe{
+
+#Joe {
     background-image: url('https://www.rollingstone.com/wp-content/uploads/2018/06/rs-213329-R1247_FEA_Rogen_A.jpg?resize=623,420&w=623');
 }
-.description{
+
+.description {
     background-color: black;
     color: #ccc2c2;
     font-family: typeka;
@@ -144,21 +152,24 @@ body{
     overflow-wrap: break-word;
     padding: 1vw;
 }
+
 /*podcast page style*/
-.logoimg{
+.logoimg {
     left: 33vw;
     top: 25vh;
     width: 104%;
     height: 100%;
     position: absolute;
 }
-.watch{
+
+.watch {
     border: solid 2px #fff;
     background-color: transparent;
     color: #fff;
 }
-.text{
-    color: rgba(255,255,255,.9);
+
+.text {
+    color: rgba(255, 255, 255, .9);
     font-size: 20px;
     line-height: 1.75em;
     text-align: center;
