--- a/01-HTML-CSS/07-SCSS/RASHEED/style.scss
+++ b/01-HTML-CSS/07-SCSS/RASHEED/style.scss
@@ -1,15 +1,13 @@
 .wrapper{
     display: flex;
-    width: 100%;
-    box-sizing: border-box;
-    margin: 100px;
-    padding: 100px;
+    margin: 50px;
+    padding: 50px;
     
-    &__wrapper_box{
-        width: 60%;
-        height: 250px;
+    .wrapper_box{
+        width: 100%;
+        height: 50px;
         margin: 50px;
-        padding: 100px;
+        padding: 50px;
     
         &__img{
             display: block;
