--- a/01-HTML-CSS/07-SCSS/Or/style.scss
+++ b/01-HTML-CSS/07-SCSS/Or/style.scss
@@ -1,20 +1,33 @@
 .container {
-    display: flex;
-    min-height: 100vh;
-    min-width: 100vw;
-    justify-content: space-around;
-    align-items: center;
-    background-color: rgb(224, 224, 224);
+    display: grid;
+    gap: 5px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 50px 50px 200px;
+    height: 100vh;
+    width: 100vw;
+
+    .head {
+        background-color: green;
+        grid-column: 1/5;
+    }
+
+    .second {
+        background-color: orange;
+        grid-column: 1/5;
+    }
+
+    .banner {
+        background-color: paleturquoise;
+        grid-column: 1/5;
+        grid-row: 3/5;
+    }
+
 
 
 }
 
 .card {
-    height: 250px;
-    width: 200px;
-    background-color: white;
-    padding: 10px;
-    border-radius: 5px;
+    padding: 30px;
 
     img {
         object-fit: cover;
@@ -22,7 +35,7 @@
         height: 50%;
     }
 
-    p{
+    p {
         color: blue;
     }
 
