--- a/01-HTML-CSS/07-SCSS/Shani/style.scss
+++ b/01-HTML-CSS/07-SCSS/Shani/style.scss
@@ -1,29 +1,64 @@
-.card1{
-    border:2px grey solid;
-    width:20vw;
-    height:100%;
-
-    
-    img{
-        width:100%;
-        display:block;
-        margin:auto;
-        
-    }
-    p{
-    text-align:center;
-    color:blue;
-    cursor:pointer;
-    padding:5px;
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(9, 150px);
     
 
+    .headergreen {
+        background-color: green;
+        grid-column-start: 1;
+        grid-column-end: 4;
 
     }
-    .price{
-        font-weight:bold;  
-        font-size:20px;
-        color:black;
-          
-      }
 
+    .headeryellow {
+        background-color: yellow;
+        grid-column-start: 1;
+        grid-column-end: 4;
+
+    }
+
+    .headerwhite {
+        background-color: rgb(255, 231, 231);
+        grid-column-start: 1;
+        grid-column-end: 4;
+
+    }
+
+   .card{
+    grid-column-start: 1;
+    grid-column-end: 4;
+    
+
+    .card1 {
+        border: 2px grey solid;
+                
+
+
+        img {
+            width: 100%;
+            display: block;
+            margin: auto;
+
+        }
+
+        p {
+            text-align: center;
+            color: blue;
+            cursor: pointer;
+            padding: 5px;
+
+
+
+        }
+
+        .price {
+            font-weight: bold;
+            font-size: 20px;
+            color: black;
+
+        }
+
+    }
+    }   
 }
