--- a/01-HTML-CSS/07-SCSS/Suarez/style.scss
+++ b/01-HTML-CSS/07-SCSS/Suarez/style.scss
@@ -1,4 +1,49 @@
+.contanier{
+    
+    height: 30vh;
+    display: grid;
+    grid-template-columns:repeat(4 150px);
+    grid-template-rows: repeat(4 150px);
+}
+.topnav {
+    grid-row: span 2;
+    grid-column: span 4;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
 
+
+.ad{
+    height: 100px;
+   background-image: url(https://s3.images-iherb.com/cms/banners/pbiombanner1124_002he-il.jpg);
+    grid-row: span 3;
+    grid-column: span 4;
+}
+
+.headerC{
+    background-color: rgb(255, 234, 47);
+    grid-row: span 4;
+    grid-column: span 4;
+}
 .wrapper{
     width: 100%;
     display: flex;
