--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/style.scss
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/style.scss
@@ -15,6 +15,7 @@ border-color: 5px solid black;
     display: grid;
     grid-template-columns: repeat(3,1fr) ;
     grid-template-rows: repeat(3,350px);
+    border-color: 5px solid black;
     grid-gap: 1em;
     grid-column: 1/3;
 }
@@ -27,7 +28,7 @@ border-color: 5px solid black;
     height: 100%;
     align-content: center;
     border: 5px solid black;
-    gap: 10px  ;
+    gap: 10px;
 
     &__picture
     {
