--- a/01-HTML-CSS/07-SCSS/Roi/style.scss
+++ b/01-HTML-CSS/07-SCSS/Roi/style.scss
@@ -5,12 +5,30 @@ body {
 .SideWrapper {
 width: 10vw;
 height: 100vh;
+border-radius: 10px;
 background-color:rgb(49, 47, 47);
-&__MainLogo {
-    width: 50px;
-    height: 25px;
+}
+&__MainLogo >img {
+    width: 200px;
+    height: 70px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 
+    .SideWrapperMenu {
+        width: 10vw;
+        height: 500px;
+        border: 1px solid white;
+        display: flex;
+        flex-direction: column;
+        &__item {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+        }
 }
 
-}
 
+
+}
