--- a/01-HTML-CSS/07-SCSS/RASHEED/style.scss
+++ b/01-HTML-CSS/07-SCSS/RASHEED/style.scss
@@ -1,33 +1,38 @@
 .wrapper{
     display: flex;
-    margin: 50px;
-    padding: 50px;
-    
-    .wrapper_box{
-        background-color: white;
+    flex-direction: column;
+    width: 100%;
+    height: 200px;
+    .wrapper-flex{
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        margin: 10px;
-        width: 30%;
-        padding: 10px;
-    
-        &__img{
-            display: block;
-            align-items: center;
-            border-radius: 50%;
-
-        }   
-        &__wraper__box__text{
-            font-size: small;
-            font-weight: bold;
-            text-align: center;
-           
-            
-        }
-        
+        justify-content: center;
     }
-    
-    
+
 }
 
+.grid{
+    display: grid;
+    grid-template-columns: repeat(4 ,1fr);
+    grid-template-rows: repeat(4 ,150px);
+    
+    
+    .box{
+        width: 100%;
+        height: 200px;
+        background-color: blue;
+
+    }
+
+    .header{
+       
+        background-color: green;
+        grid-column: 1/5;
+    }
+
+    .hero{
+        background-color: burlywood;
+        grid-column: 1/5;
+        grid-row: 2/4;
+    }
+
+}
